<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Mr.Krabs</string>
    <string name="WelcomeButton">Begin Saving! </string>
    <string name="WelcomeHeader">Money Money Money Money Money </string>
    <string name="WelcomeText">Welcome to Mr.Krabs\' Saving App! \n \n Learn to Budget after moving!</string>
    <string name="Next">Next</string>

    <string name="GeneralText1">General</string>
    <string name="GeneralText2">Current City:</string>
    <string name="CityListHint">Select a City</string>
    <string name="GeneralText3">Destination City:</string>
    <string name="GeneralText4">Expected Annual Salary:</string>

    <string name="RentText1">Monthly Housing Cost</string>
    <string name="RentText2">Number of Bedrooms</string>
    <string name="BedroomsHint">Number of Bedrooms</string>
    <string name="RentText3">Location</string>
    <string name="InOutHint">In or out of the city</string>
    <string name="RentText4">Rent</string>
    <string name="RentText5">Utilities and Internet</string>

    <string name="EssentialsText1">Monthly Essentials Cost</string>
    <string name="EssentialsText2">Type of Transportation</string>
    <string name="PersonalPublicHint">Public or Personal</string>
    <string name="EssentialsText3">Transportation</string>
    <string name="GasolineHint">Public or Gasoline Costs</string>
    <string name="EssentialsText4">Groceries</string>
    <string name="EssentialsText5">Clothes</string>

    <string name="EntertainmentText1">Monthly Entertainment Costs</string>
    <string name="EntertainmentText2">Dining Out</string>
    <string name="EntertainmentText3">Alcohol</string>
    <string name="EntertainmentText4">Fitness</string>
    <string name="FitnessHint">Gym, Club Sports, etc.</string>
    <string name="EntertainmentText5">Miscellaneous Entertainment</string>
    <string name="OtherHint">$(USD)</string>
    <string name="MiscHint">Cinema, Subscriptions etc.</string>

    <string name="Results1Text1">Results</string>

    <string-array name="cities_list"><item>Boston</item></string-array>
</resources>
