<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    android:background="#bdffbd" >

    <TextView
        android:id="@+id/EntertainmentText1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/EntertainmentText1"
        android:background="#f0f070"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/EntertainmentText2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/EntertainmentText1"
        android:text="@string/EntertainmentText2"
        android:layout_marginTop="10dp"
        android:background="#f0f070"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/DiningOut"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/EntertainmentText2"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:ems="10"
        android:inputType="number"
        android:singleLine="true"/>

    <TextView
        android:id="@+id/EntertainmentText3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/DiningOut"
        android:text="@string/EntertainmentText3"
        android:layout_marginTop="10dp"
        android:background="#f0f070"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/Alcohol"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/EntertainmentText3"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:ems="10"
        android:inputType="number"
        android:singleLine="true"/>

    <TextView
        android:id="@+id/EntertainmentText4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/Alcohol"
        android:text="@string/EntertainmentText4"
        android:layout_marginTop="10dp"
        android:background="#f0f070"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/Other"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/EntertainmentText4"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:ems="10"
        android:hint="@string/OtherHint"
        android:inputType="number"
        android:singleLine="true"/>

    <TextView
        android:id="@+id/EntertainmentText5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/Other"
        android:text="@string/EntertainmentText5"
        android:layout_marginTop="10dp"
        android:background="#f0f070"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/Fitness"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/EntertainmentText5"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:ems="10"
        android:hint="@string/FitnessHint"
        android:inputType="number"
        android:singleLine="true"/>

    <Button
        android:id="@+id/EntertainmentButton"
        android:layout_width="300dp"
        android:layout_height="70dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:text="@string/Next"
        android:background="#f0f070"
        android:textSize="21dp"/>



</RelativeLayout>