<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    android:background="#bdffbd" >

    <TextView
        android:id="@+id/EssentialsText1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/EssentialsText1"
        android:background="#f0f070"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/EssentialsText2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/EssentialsText1"
        android:text="@string/EssentialsText2"
        android:layout_marginTop="10dp"
        android:background="#f0f070"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/EssentialsInput1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/EssentialsText2"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:ems="10"
        android:inputType="numberDecimal" />

    <Button
        android:id="@+id/EssentialsButton"
        android:layout_width="300dp"
        android:layout_height="70dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:text="@string/Next"
        android:background="#f0f070"
        android:textSize="21dp"/>



</RelativeLayout>