<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="0dp"
    android:background="#0D3C60" >

    <TextView
        android:id="@+id/WelcomeHeader"
        android:layout_width="3000dp"
        android:layout_height="60dp"
        android:layout_centerHorizontal="true"
        android:text="@string/WelcomeHeader"
        android:textSize="21dp"
        android:textColor="#000000"
        android:background="#98B6C6"
        android:layout_marginTop="25dp"
        android:gravity="center"
        android:fontFamily="@font/ubuntu_mi" />

    <Button
        android:id="@+id/WelcomeButton"
        android:layout_width="300dp"
        android:layout_height="70dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:text="@string/WelcomeButton"
        android:textColor="#000000"
        android:background="@drawable/button_shape"
        android:textSize="21dp"/>

    <pl.droidsonroids.gif.GifImageView
        android:id="@+id/KrabsGif"
        android:layout_width="380dp"
        android:layout_height="300dp"
        android:layout_below="@id/WelcomeHeader"
        android:layout_marginTop="25dp"
        android:background="@drawable/krabs_money"
        android:layout_centerInParent="true"/>

    <TextView
        android:id="@+id/WelcomeText"
        android:layout_width="500dp"
        android:layout_height="150dp"
        android:layout_below="@id/KrabsGif"
        android:layout_above="@id/WelcomeButton"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="50dp"
        android:layout_centerHorizontal="true"
        android:background="#98B6C6"
        android:text="@string/WelcomeText"
        android:textSize="18dp"
        android:textColor="#000000"
        android:fontFamily="@font/ubuntu_mi"
        android:gravity="center"
        android:textAllCaps="true"/>


</RelativeLayout>